Fix table sizing when 'max-width' is used

Fix table sizing when 'max-width' is used
https://bugs.webkit.org/show_bug.cgi?id=12396

Reviewed by NOBODY (OOPS!).

Merge - https://src.chromium.org/viewvc/blink?revision=149011&view=revision

This is to align "max-width" on tables behavior with Blink / Chrome and Gecko / Firefox.

The fix is to avoid constraining min-content and ensure that the table
logical width is at least its min-content size.

* Source/WebCore/rendering/RenderTable.cpp:
(RenderTable::updateLogicalWidth): Update comment and add ASSERT with comment
(RenderTable::computePreferredLogicalWidths): Add comment
* LayoutTests/fast/tables/css-table-max-width.html: Update to use "js-test.js"
* LayoutTests/fast/table/table-max-width-override-width-attribute.html: Added Test Case
* LayoutTests/fast/table/table-max-width-override-width-attribute-expected.html: Added Test Case Expectations